--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,7 +24,6 @@
 
 .site-nav {
     line-height: 56px;
-    text-align: center;
 
     .menu-icon {
         display: none;
@@ -84,15 +83,6 @@
                     fill: $grey-color-dark;
                 }
             }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
         }
         
         .nav-links {
@@ -247,6 +237,7 @@
 
 .post-content {
     margin-bottom: $spacing-unit;
+    text-align: left;
     
 
     h2 {
@@ -277,8 +268,9 @@
 /* Custom Article CSS */
 article.post {
   background-color: #FFF7F5;
-  border-radius: 25px;
-  padding: $spacing-unit * 2;
+  border-radius: 15px;
+  padding: $spacing-unit;
+  margin-left: -35px;
   
   @include media-query($on-laptop) {
       background-color: #FFF7F5;
